Much cleaning up and other work.

--- a/config.json
+++ b/config.json
@@ -6,6 +6,8 @@
       "wintersmith-sass"
   ],
   "require": {
-      "_": "underscore"
+      "_": "underscore",
+      "moment": "moment",
+      "SCsite": "./SCsite_module"
   }
 }
